# moresamples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: .clang-format  main.cpp
src/: Ctx.cpp  Ctx.hpp  Utl.hpp  types.hpp
src/audio/: audio.cpp  audio.hpp  filters.cpp  filters.hpp
src/nodes/: nodes.cpp  nodes.hpp  serialization.cpp  serialization.hpp  type_info.cpp  type_info.hpp  unity.cpp
src/nodes/impl/: AudioOutput.cpp  BiQuadFilter.cpp  CombFilter.cpp  Envelope.cpp  FrequencyResponse.cpp  Generator.cpp  HighPassFilter.cpp  Math.cpp  Splitter.cpp  Value.cpp  common.hpp  unity.cpp
src/ui/: grid.cpp  menuBar.cpp  nodeEditor.cpp  popups.cpp  style.cpp  ui.hpp  unity.cpp
test/: CMakeLists.txt  filters.cpp  nodes.cpp
